# resume-jd-matcher

./: .gitignore  README.md
backend/: .env.example  main.py  pyproject.toml  requirements.txt
backend/src/resume_matcher/: __init__.py  config.py  matcher.py  parser.py
backend/tests/: test_matcher.py  test_parser.py
frontend/: .gitignore  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  config.js  index.css
frontend/src/components/: ProcessingModule.jsx  ResultsPanel.jsx  ScoreGauge.jsx  SkillPills.jsx  ThreeBackground.jsx  UploadPanel.jsx
