[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# ---------------------------------------------------------------------------
# Project metadata
# ---------------------------------------------------------------------------
[project]
name            = "resume-matcher"
version         = "0.1.0"
description     = "AI-powered resume ↔ job-description matcher using Claude"
readme          = "README.md"
license         = { text = "MIT" }
requires-python = ">=3.11"

keywords = ["resume", "job-matching", "nlp", "google", "gemini", "streamlit"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Runtime dependencies (no version pins here — pins live in requirements.txt)
dependencies = [
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "python-multipart>=0.0.6",
    "pdfplumber>=0.11",
    "google-genai>=0.3.0",
    "python-dotenv>=1.0",
]

# ---------------------------------------------------------------------------
# Optional dependency groups
# ---------------------------------------------------------------------------
[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

# ---------------------------------------------------------------------------
# Package discovery (src layout)
# ---------------------------------------------------------------------------
[tool.setuptools.packages.find]
where = ["src"]   # look for packages under src/

# ---------------------------------------------------------------------------
# Tool: pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths   = ["tests"]
addopts     = "-v --tb=short"

# ---------------------------------------------------------------------------
# Tool: coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source  = ["src/resume_matcher"]
omit    = ["tests/*"]

[tool.coverage.report]
show_missing = true
